--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,14 @@
   color: white;
 }
 
+.padding-bottom-20 {
+    padding-bottom: 20px;
+}
+
+.padding-top-40 {
+    padding-top: 40px;
+}
+
 .App-title {
   font-size: 1.5em;
 }
