--- a/src/containers/Top.css
+++ b/src/containers/Top.css
@@ -1,5 +1,5 @@
 
-.appNameStyle {
+.app-name-style {
       position: absolute;
       left: -3px;
       top: -3px;
@@ -10,7 +10,7 @@
       border-radius: 6px 6px 6px 6px;
 }
 
-.appLogoStyle {
+.app-logo-style {
       position: absolute;
       right: 0px;
       top: -3px;
@@ -22,9 +22,14 @@
 }
 
 .list-group-item {
-    padding: 0px!important;
+      padding: 0px!important;
+}
+
+.padding-right-left-10 {
+      padding-right: 10px;
+      padding-left: 10px;
 }
 
 .padding-top-15 {
-    padding-top: 15px;
+      padding-top: 15px;
 }
