--- a/src/containers/Top.css
+++ b/src/containers/Top.css
@@ -37,3 +37,11 @@
 .cursor-pointer {
       cursor: pointer;
 }
+
+.header-style {
+      background-color: rgba(255,255,255,0.1);
+      border: 1px solid black;
+      margin-top: 10px;
+      margin-bottom: 10px;
+      margin: 10px;
+}
