--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -30,6 +30,10 @@
   font-size: large;
 }
 
+.white-color {
+  color: #ffffff;
+}
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
