--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -15,11 +15,16 @@
 }
 
 .padding-bottom-20 {
-    padding-bottom: 20px;
+  padding-bottom: 20px;
 }
 
 .padding-top-40 {
-    padding-top: 40px;
+  padding-top: 40px;
+}
+
+.padding-top-bot-5 {
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 
 .App-title {
@@ -32,6 +37,10 @@
 
 .white-txt {
   color: #ffffff;
+}
+
+.overflow-no {
+  overflow: hidden;
 }
 
 @keyframes App-logo-spin {
