--- a/src/containers/Top.css
+++ b/src/containers/Top.css
@@ -50,3 +50,10 @@
       margin-bottom: 10px;
       margin: 10px;
 }
+
+.save-button {
+      width: 100%;
+      -webkit-box-shadow: 0px 0px 28px 3px rgba(0,0,0,0.75);
+      -moz-box-shadow: 0px 0px 28px 3px rgba(0,0,0,0.75);
+      box-shadow: 0px 0px 28px 3px rgba(0,0,0,0.75);
+}
